Fix #3849: Forum Button in the topbar has broken css

--- a/app/javascript/src/styles/base/030_links.scss
+++ b/app/javascript/src/styles/base/030_links.scss
@@ -24,15 +24,6 @@ a.active {
   font-weight: bold;
 }
 
-a.login {
-  font-weight: bold;
-  color: #e00;
-}
-
-a.forum-updated {
-  font-style: italic;
-}
-
 a.wiki-link {
   margin-right: 0.3em;
 }
